--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 plugins {
 	id 'java'
 	id 'jacoco'
-	id 'org.springframework.boot' version '4.0.2'
+	id 'org.springframework.boot' version '3.2.2'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.sonarqube' version "4.4.1.3373"
+	id 'checkstyle'
 }
 
 group = 'com.example'
@@ -21,10 +23,27 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
-	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+	dependsOn test
+	reports {
+		xml.required = true
+	}
+}
+
+sonar {
+	properties {
+		property "sonar.projectKey", "KEL_ADPRO_individual-preparation"
+		property "sonar.organization", "kel-adpro"
+		property "sonar.host.url", "https://sonarcloud.io"
+		property "sonar.coverage.jacoco.cmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
+	}
 }
