--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '4.0.2'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'jacoco'
+	id 'checkstyle'
+	id 'org.sonarqube' version '5.0.0.4638'
 }
 
 group = 'com.example'
@@ -26,4 +29,37 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
 }
+
+jacoco {
+	toolVersion = "0.8.12"
+}
+
+jacocoTestReport {
+	dependsOn test
+	reports {
+		xml.required = true
+		html.required = true
+	}
+}
+
+check {
+	dependsOn jacocoTestReport
+}
+
+checkstyle {
+	toolVersion = "10.12.3"
+	configFile = file("$rootDir/config/checkstyle/checkstyle.xml")
+}
+
+sonar {
+	properties {
+		property "sonar.host.url", "https://sonarcloud.io"
+		property "sonar.organization", "kel-adpro"
+		property "sonar.projectKey", "KEL-ADPRO_individual-preparation"
+		property "sonar.coverage.jacoco.xmlReportPaths",
+				"${layout.buildDirectory.get()}/reports/jacoco/test/jacocoTestReport.xml"
+	}
+}
+
