--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
 	id 'jacoco'
 	id 'org.springframework.boot' version '4.0.2'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.sonarqube' version "4.4.1.3373"
+	id 'checkstyle'
 }
 
 group = 'com.example'
@@ -34,5 +36,14 @@ jacocoTestReport {
 	dependsOn test
 	reports {
 		xml.required = true
+	}
+}
+
+sonar {
+	properties {
+		property "sonar.projectKey", "KEL_ADPRO_individual-preparation"
+		property "sonar.organization", "kel-adpro"
+		property "sonar.host.url", "https://sonarcloud.io"
+		property "sonar.coverage.jacoco.cmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
 	}
 }
